PHP 4                                                                      NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Jun 2004, Version 4.3.7
- Changed user error handler mechanism to relay to built-in error handler if it
  returns false. (Andrei)
- Fixed bug #28569 (informix connection id is not thread safe).
  (novicky at aarongroup dot cz, Ard)
- Fixed bug #28564 (Problem building informix as a shared extension). 
  (roques at mti dot ag, Ilia)

25 May 2004, Version 4.3.7RC1
- Upgraded bundled GD library to 2.0.23. (Ilia)
- Fixed command line escaping routines for win32. (Ilia)
- Fixed problems with *printf() functions and '%f' formatting. (Marcus)
- Fixed possible crash inside pg_copy_(to|from) function if delimiter is more
  then 1 character long. (Ilia)
- Fixed crash inside cpdf_place_inline_image() when working with truecolor
  images. (Ilia)
- Fixed handling of return values from storred procedures in mssql_execute()
  with multiple result sets returned. (Frank)
- Fixed bug #28456 (Problem with enclosed / in uploaded files). (Antony)
- Fixed logic bug in session_register() which allowed registering _SESSION
  and/or HTTP_SESSION_VARS. (Sara)
- Fixed bug #28508 (Do not make hypot() available if not supported by libc).
  (Ilia)
- Fixed bug #28506 (Allow negative start angle in imagearc and imagefilledarc.
  (Pierre)
- Fixed bug #28386 (wordwrap() wraps lines 1 character too soon). (Ilia)
- Fixed bug #28374 (Possible unterminated loop inside 
  _php_pgsql_trim_message()). (Ilia)
- Fixed bug #28355 (glob() does not return error on Linux when it does not
  have permission to open the directory). (Ilia)
- Fixed bug #28289 (incorrect resolving of relative paths by glob() in
  windows). (Ilia)
- Fixed bug #28229 (run-tests tripped up by spaces in names). (Marcus)
- Fixed bug #28228 (number_format() does not allow empty decimal separator).
  (Ilia)
- Fixed bug #28196 (missing error constants in cURL extension). (Ilia)